# Greenhouse-Guardian

./: README.md
ansible/: .gitignore  hosts  site.yml
ansible/group_vars/: all
api/: Dockerfile  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
api/entrypoints/: base.sh  dev.sh  prod.sh
api/src/: schema.yml
api/src/api/: urls.py  utils.py
api/src/api/settings/: __init__.py  base.py  dev.py  prod.py
api/src/guardian/: admin.py  filters.py  urls.py  views.py
api/src/guardian/migrations/: 0001_initial.py  0002_device_device_token.py  0003_remove_device_humidity_limit_and_more.py  0004_webhook.py  0005_webhook_last_notification.py  0006_alter_webhook_webhook_type.py
api/src/guardian/models/: __init__.py  device.py  entry.py  plant.py  plant_entry.py  webhook.py
api/src/guardian/serializers/: __init__.py  device.py  entry.py  plant.py  plant_entry.py  webhook.py
api/src/guardian/views/: __init__.py  device.py  entry.py  plant.py  webhook.py
api/src/user_management/: permissions.py  urls.py  views.py
api/src/user_management/middleware/: __init__.py  auth.py
api/src/user_management/serializers/: __init__.py  user.py
arduino/GreenhouseGuardian/: platformio.ini
arduino/GreenhouseGuardian/src/: Guardian.cpp  Guardian.h  HTTPManager.cpp  Main.cpp  WifiHandler.cpp  WifiHandler.h
frontend/: Dockerfile  Dockerfile.dev  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json
frontend/src/: app.css  auth.ts  error.html
frontend/src/lib/: utils.ts
(+44 files in other folders)
